# RayTracerPublic

./: CMakeLists.txt  Neptune.json  Neptune.json~  README.md  run.sh
examples/: CMakeLists.txt  SceneDataTypes.h  test_pngWrite.cpp
renderer/: #SolidColor.h#  .#SolidColor.h  BlinnPhongShader.cpp  BlinnPhongShader.cpp~  BlinnPhongShader.h  Box.cpp  Box.cpp~  Box.h  Box.h~  CMakeLists.txt  CMakeLists.txt~  Camera.h  Camera.h~  Circle.cpp  Circle.cpp~  Circle.h  Circle.h~  CoordinateSys.cpp  CoordinateSys.h  CoordinateSys.h~  FrameBuffer.cpp  FrameBuffer.cpp~  FrameBuffer.h  HitStructure.h  LambertianShader.cpp  LambertianShader.cpp~  LambertianShader.h  LambertianShader.h~  Light.h  OrthographicCamera.h  OrthographicCamera.h~  PerspectiveCamera.cpp  PerspectiveCamera.cpp~  PerspectiveCamera.h  PerspectiveCamera.h~  PointLight.h  Rasterizer.cpp  Rasterizer.cpp~  Rasterizer.h  Rasterizer.h~  (+25 more)
src/: CMakeLists.txt  Random.cpp  Random.h  handleGraphicsArgs.cpp  handleGraphicsArgs.h
utests/: CMakeLists.txt
